@@ -7,6 +7,8 @@ versions of Red5.
 Red5 0.9.0 (unreleased)
 -----------------------
 New Features:
+- Added AVC/h.264 live streaming based on Tiago Jacobs patches
+- Added enums for Audio and Video codec types
 
 Bugfixes:
 - Fixed bug with recording, where meta files were not removed when using the same name
